<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color1">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/login_bg_color2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/register_phone"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/login_text_color1"/>
        <EditText
            android:id="@+id/edt_register_phone"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="16sp"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_get_verify"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/login_text_color2"
            android:text="@string/register_get_verify_code"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/login_bg_color2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/register_verify"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/login_text_color1"/>
        <EditText
            android:id="@+id/edt_register_verify"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="16sp"
            android:hint="@string/register_verify_hint"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_show_verify"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/login_text_color2"
            android:text="@string/register_show_verify"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/login_bg_color2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/login_password"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/login_text_color1"/>
        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="16sp"
            android:hint="@string/register_password_hint"
            android:maxLength="12"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_show_password"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/login_text_color2"
            android:text="@string/register_show_password"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_bg_color2"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="30dp"
        android:textColor="@android:color/white"
        android:text="@string/register_immediate_register"
        android:enabled="false"
        android:textSize="16sp"
        android:background="@drawable/shape_button_login_background"/>
</LinearLayout>