<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color1"
    android:visibility="visible">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/login_bg_color2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/register_verify"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/login_text_color1"/>
        <EditText
            android:id="@+id/edt_find_pass_verify"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="16sp"
            android:hint="@string/find_password_verify_hint"
            android:maxLength="6"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_find_pass_get_verify"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/login_text_color2"
            android:text="@string/register_get_verify_code"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/login_bg_color2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/find_password_new_password"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/login_text_color1"/>
        <EditText
            android:id="@+id/edt_find_pass_new_password"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="16sp"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_hide_password"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/login_text_color2"
            android:text="@string/find_password_hide_password"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_bg_color2"/>
    <TextView
        android:id="@+id/tv_find_pass_show_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:visibility="gone"
        android:text="@string/find_password_show_phone"/>
</LinearLayout>