<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="185dp"
    android:layout_height="160dp"
    android:background="@drawable/shape_popup_window_gb">
    <TextView
        android:id="@+id/tv_popup_window_rename"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/control_interface_rename"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:drawableLeft="@mipmap/ic_sh"
        android:layout_marginLeft="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/login_text_color1"/>
    <CheckBox
        android:id="@+id/chb_remind"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/left_menu_remind"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:button="@null"
        android:drawablePadding="10dp"
        android:textColor="@color/login_text_color1"
        android:drawableRight="@drawable/selector_left_menu_remind"
        android:drawableLeft="@mipmap/ic_remind"
        android:background="@android:color/white"/>
    <TextView
        android:id="@+id/tv_popup_window_share"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/add_share_title"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:drawableLeft="@mipmap/ic_share_right"
        android:layout_marginLeft="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/login_text_color1"/>
    <TextView
        android:id="@+id/tv_popup_window_filter"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/control_interface_filter_screen"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:drawableLeft="@mipmap/ic_reset"
        android:layout_marginLeft="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/login_text_color1"/>
</LinearLayout>