<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@mipmap/ic_left_menu_bg">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:background="@mipmap/ic_user"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_menu_user_name"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_above="@+id/tv_user_phone"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_menu_user_phone"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/tv_home"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/left_menu_home"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textSize="15sp"
            android:visibility="gone"
            android:textColor="@color/login_text_color2"
            android:drawableLeft="@mipmap/ic_home"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/tv_reader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:text="@string/left_menu_reader"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textSize="15sp"
            android:textColor="@color/login_text_color2"
            android:drawableLeft="@mipmap/ic_read"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:text="@string/left_menu_about"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textSize="15sp"
            android:textColor="@color/login_text_color2"
            android:drawableLeft="@mipmap/ic_about"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:text="@string/my_share_title2"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textSize="15sp"
            android:textColor="@color/login_text_color2"
            android:drawableLeft="@mipmap/ic_share"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/tv_quit"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:text="@string/left_menu_quit"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textSize="15sp"
            android:textColor="@color/login_text_color2"
            android:drawableLeft="@mipmap/ic_quit"
            android:background="@android:color/white"/>
    </LinearLayout>
</LinearLayout>