<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">
    <CheckBox
        android:id="@+id/chb_device_pattern"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/control_interface_pattern"
        android:background="@android:color/transparent"
        android:textColor="@drawable/selector_device_text_color"
        android:drawableTop="@drawable/selector_device_pattern"/>
    <CheckBox
        android:id="@+id/chb_sterilize"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/control_interface_sterilize"
        android:background="@android:color/transparent"
        android:textColor="@drawable/selector_device_text_color"
        android:drawableTop="@drawable/selector_device_sterilize"/>
    <CheckBox
        android:id="@+id/chb_anion"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/control_interface_anion"
        android:background="@android:color/transparent"
        android:textColor="@drawable/selector_device_text_color"
        android:drawableTop="@drawable/selector_device_anion"/>
    <CheckBox
        android:id="@+id/chb_air_speed"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/control_interface_air_speed"
        android:textColor="@drawable/selector_device_text_color"
        android:drawableTop="@drawable/selector_device_air_speed"/>

    <CheckBox
        android:id="@+id/chb_timer"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/control_interface_timer_close"
        android:textColor="@drawable/selector_device_text_color"
        android:drawableTop="@drawable/selector_device_timer"/>
</LinearLayout>