<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color1">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/login_bg_color2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_account"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/login_text_color1"/>
        <EditText
            android:id="@+id/edt_account"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/login_account_hint"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/ic_close"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/login_bg_color2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_password"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/login_text_color1"/>
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/login_password_hint"/>
        <TextView
            android:id="@+id/tv_find_password"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/login_text_color2"
            android:text="@string/find_password_title"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_bg_color2"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="30dp"
        android:text="@string/login_start_use"
        android:enabled="false"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_button_login_background"/>
</LinearLayout>