<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <TextView
        android:id="@+id/tv_device_hint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_device_hint1"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/tv_device_hint2"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_device_hint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_device_hint2"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/iv_device_icon"
        android:textColor="@color/login_text_color2"
        android:textSize="14sp"/>
    <ImageView
        android:id="@+id/iv_device_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@mipmap/ic_device"/>
    <Button
        android:id="@+id/btn_discover_connect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="30dp"
        android:text="@string/discover_device_connect"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_button_login_bg_light"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>